--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css" type="text/css" />
-    <title>Media Queries</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="container">
         <div class="box mobile"></div>
         <div class="box tablet"></div>
         <div class="box desktop"></div>
-        
     </div>
 </body>
 </html>
